# openai-ads-mcp

./: .gitignore  LICENSE  README.md  capabilities.md  pyproject.toml  requirements.txt
openai_ads_mcp/: __init__.py  __main__.py  client.py  coordinator.py  server.py
openai_ads_mcp/tools/: __init__.py  ad_account.py  ad_groups.py  ads.py  campaigns.py  insights.py
